--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,7 @@
   "useTabs": false,
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "none",
-  "bracketSpacing": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
   "arrowParens": "avoid"
 }
