--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6"
+    "@actions/core": "^1.2.6",
+    "@actions/io": "^1.1.1",
+    "@actions/tool-cache": "^1.7.1",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
